test/compile_errors/err_u128_literal_max_overflow.w
//! expect-error: integer literal does not fit suffix type

fn main:
    let _ = 340282366920938463463374607431768211456u128
